[package]
name = "app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }

dotenvy = "0.15.7" # Loading .env file
tokio = { version = "1.35.1", features = ["full"] }
sea-orm = { version = "0.12.0", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"] }